--- a/themes/hugo-tranquilpeak-theme/layouts/index.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/index.html
@@ -1,3 +1,9 @@
+<style>
+.twitter {
+    float: right;
+}
+</style>
+
 {{ partial "head.html" . }}
   <body>
     <div id="blog">
@@ -14,8 +20,10 @@
             {{ .Render "summary" }}
           {{ end }}
           {{ partial "pagination.html" . }}
+      </div>
         </section>
         {{ partial "footer.html" . }}
       </div>
     </div>
 {{ partial "foot.html" . }}
+
